2004-07-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/i_vars.h, prototype.h, src/g_rc.c, g_register.c,
	gnetlist.c, i_vars.c: Removed a whole bunch of rc related code.
	The removed code was moved into libgeda.

        * configure.ac: Updated version to 20040710
	
2004-02-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_traverse.c: Fixed a broken comment (broken by indent)

2004-01-17 Ales Hvezda   <ahvezda@geda.seul.org>

        * config.h.in: Remove machine generated file.

2004-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20040111

2004-01-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-switcap.scm: Applied Dan's 20040105 patch.

        * docs/Makefile.am: Changed doc install directory readme to readmes

2004-01-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-switcap.scm: Applied patch by Dan McMahill to use
	his new net aliasing (modification) code.

	* docs/gnetlist.1: Spent a little time updating the man page with
	at least the current list of backends and all the new command line
	flags.

	* tests/gnetlistrc.vhdl, tests/Makefile.am: Added vhdl only
	gnetlistrc.  This was required because the vhdl library was
	removed from system-commonrc, so this rc file has to put it back.
	The gnetlistrc.vhdl file is copied to gnetlistrc before any vhdl
	test is run and then the gnetlistrc file is removed.

2004-01-03 Ales Hvezda   <ahvezda@geda.seul.org>

        * scheme/gnet-gsch2pcb.scm: Upgraded to Bill Wilson's latest
        version (1.2)

	* scheme/gnet-PCBboard.scm: Applied patch by Dan McMahill to fix
	some m4 quoting issues. Thanks.

	* scheme/gnetlist.scm: Applied patch (20031216) by Dan McMahill to
	add various scheme functions to handle net name modification
	for various netlist targets. Thanks.

	* scheme/futurenet2.scm: Added new backend for futernet2 by Dan
	McMahill.  Thanks.  (20031216)

	* scheme/gnet-pads.scm: Applied patch (20031216) by Dan McMahill to 