@@ -1,4 +1,4 @@
-;; gEDA - GNU Electronic Design Automation
+;;; gEDA - GNU Electronic Design Automation
 ;;; gnetlist - GNU Netlist
 ;;; Copyright (C) 1998-2000 Ales V. Hvezda
 ;;;
@@ -60,6 +60,7 @@
 ;;  12.29.2003.a -- Minor bugfix.
 ;;  12.29.2003.b -- Second minor bugfix.
 ;;  12.29.2003.c -- Change res & cap to incorporate modelname & "area=" attrib.
+;;  3.24.2004 -- Bugfixes made to JFET stuff during Feb.  Change released now.
 ;;
 ;;**********************************************************************************
 ;;
@@ -618,10 +619,10 @@
 (define spice-sdb:write-transistor-diode
   (lambda (package type attrib-list port)
     
-    ;; Here we write out the refdes and nets.  
+    ;; First we write out the refdes and nets.  
     (spice-sdb:write-component-no-value package port)
 
-    ;; First do local assignments
+    ;; Next do local assignments
     (let ((model-name (gnetlist:get-package-attribute package "model-name"))
 	  (model (gnetlist:get-package-attribute package "model"))
 	  (value (gnetlist:get-package-attribute package "value"))
@@ -908,7 +909,7 @@
 ;;-----------------------------------------------------------
 ;;  write n-channel jfet transistor
 ;;-----------------------------------------------------------
-(define spice-sdb:write-jfet-transistor
+(define spice-sdb:write-nfet-transistor
   (lambda (package port)
     (debug-spew (string-append "Found n-channel JFET.  Refdes = " package "\n"))
     (spice-sdb:write-prefix package "J" port)
@@ -920,7 +921,7 @@
 ;;-----------------------------------------------------------
 ;;  write p-channel jfet transistor
 ;;-----------------------------------------------------------
-(define spice-sdb:write-jfet-transistor
+(define spice-sdb:write-pfet-transistor
   (lambda (package port)
     (debug-spew (string-append "Found p-channel JFET.  Refdes = " package "\n"))
     (spice-sdb:write-prefix package "J" port)
@@ -1411,9 +1412,9 @@
           ( (string=? device "NPN_TRANSISTOR")
               (spice-sdb:write-npn-bipolar-transistor package port))
           ( (string=? device "PFET_TRANSISTOR")
-              (spice-sdb:write-jfet-transistor package port))
+              (spice-sdb:write-pfet-transistor package port))
           ( (string=? device "NFET_TRANSISTOR")
-              (spice-sdb:write-jfet-transistor package port))
+              (spice-sdb:write-nfet-transistor package port))
           ( (string=? device "MESFET_TRANSISTOR")
               (spice-sdb:write-mesfet-transistor package port))
           ( (string=? device "RESISTOR")
@@ -1548,7 +1549,7 @@
   (lambda (port)
     (display "*********************************************************\n" port)
     (display "* Spice file generated by gnetlist                      *\n" port)
-    (display "* spice-sdb version 12.29.2003.c by SDB --              *\n" port)
+    (display "* spice-sdb version 3.24.2004 by SDB --                 *\n" port)
     (display "* provides advanced spice netlisting capability.        *\n" port)
     (display "* Documentation at http://www.brorson.com/gEDA/SPICE/   *\n" port)
     (display "*********************************************************\n" port)
@@ -1562,7 +1563,7 @@
   (lambda (port)
     (display "*******************************\n" port)
     (display "* Begin .SUBCKT model         *\n" port)
-    (display "* spice-sdb ver 12.29.2003.c  *\n" port)
+    (display "* spice-sdb ver 3.24.2004     *\n" port)
     (display "*******************************\n" port)
   )
 )
@@ -1617,7 +1618,7 @@
 	   (model-name (spice-sdb:get-subcircuit-modelname schematic-type)) 
 	   (file-info-list (list))
 	  )
-      (display "Using SPICE backend by SDB -- Version of 12.29.2003.c\n")
+      (display "Using SPICE backend by SDB -- Version of 3.24.2004\n")
       (display (string-append "schematic-type = " schematic-type "\n"))
       ;; (display (string-append "model-name = " model-name "\n"))
 
