@@ -1,6 +1,6 @@
 *********************************************************
 * Spice file generated by gnetlist                      *
-* spice-sdb version 12.29.2003.c by SDB --              *
+* spice-sdb version 3.24.2004 by SDB --                 *
 * provides advanced spice netlisting capability.        *
 * Documentation at http://www.brorson.com/gEDA/SPICE/   *
 *********************************************************
